# ssp-sdk

./: .gitmodules  Percussa.h  README.md  qvca.jucer
Builds/Linux/: Makefile  build.sh  install.sh
JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.h
JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.h
JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
JuceLibraryCode/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h
JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.h
JuceLibraryCode/modules/juce_core/: juce_core.h
JuceLibraryCode/modules/juce_cryptography/: juce_cryptography.h
JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.h
JuceLibraryCode/modules/juce_events/: juce_events.h
JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
JuceLibraryCode/modules/juce_opengl/: juce_opengl.h
JuceLibraryCode/modules/juce_video/: juce_video.h
Source/: Oscilloscope.cpp  Oscilloscope.h  Percussa.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: BUILDING.md  DEVENV.md  buildscript.md
examples/: .gitignore  CMakeLists.txt  xcSSP.cmake
examples/api/: CMakeLists.txt
examples/api/test/: CMakeLists.txt  Percussa.h  test.cpp
examples/qvca/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
examples/test/: test.cpp
examples/vst/: CMakeLists.txt
examples/vst/qvca/: CMakeLists.txt
examples/vst/qvca/Source/: Oscilloscope.cpp  Oscilloscope.h  Percussa.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SSPApi.cpp
vst_examples/: .gitignore  CMakeLists.txt
vst_examples/qvca/: CMakeLists.txt
vst_examples/qvca/Source/: PluginProcessor.h
